--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://pgcq.github.io/micoleideal/",
+  "homepage": "https://pgcq.github.io/micoleideal",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
@@ -15,7 +15,8 @@
   "dependencies": {
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.87.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -28,5 +29,4 @@
     "globals": "^16.0.0",
     "vite": "^6.3.1"
   }
-  
 }
